Fix button link area. Add spacing after input form on quick reply.

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -255,7 +255,7 @@
           top: 55px;
           left: auto;
           right: 0;
-          width: 200px;
+          width: 167px;
           background: white;
           border-top: none;
           border-left: 1px solid #eee;
