--- a/app/assets/stylesheets/community.css.scss
+++ b/app/assets/stylesheets/community.css.scss
@@ -249,6 +249,10 @@
       }
     }
 
+    .redactorable {
+      margin-bottom: 20px;
+    }
+    
     &.replies {
       margin-top: 15px;
       .icon-comments {
